kubernetes/apps/hydra/federated-cloud-platform/httpRoute-admin-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fcp-admin-http
  namespace: federated-cloud-platform
spec:
  parentRefs:
  - name: http-gateway
    namespace: gateways
  hostnames:
  - admin.fcp.thetillhoff.de
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
